// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for canny-functions destination: group action - all fields 1`] = `
Object {
  "groupId": "s1D5kBYs]jP",
  "traits": Object {
    "testType": "s1D5kBYs]jP",
  },
  "type": "s1D5kBYs]jP",
}
`;

exports[`Testing snapshot for canny-functions destination: group action - required fields 1`] = `
Object {
  "groupId": "s1D5kBYs]jP",
  "type": "s1D5kBYs]jP",
}
`;

exports[`Testing snapshot for canny-functions destination: identify action - all fields 1`] = `
Object {
  "traits": Object {
    "avatar": "q0223WzGvKGmd",
    "company": Object {
      "testType": "q0223WzGvKGmd",
    },
    "createdAt": "q0223WzGvKGmd",
    "email": "culikvat@mojanve.km",
    "id": "q0223WzGvKGmd",
    "name": "q0223WzGvKGmd",
  },
  "type": "q0223WzGvKGmd",
  "userId": "q0223WzGvKGmd",
}
`;

exports[`Testing snapshot for canny-functions destination: identify action - required fields 1`] = `
Object {
  "traits": Object {},
  "type": "q0223WzGvKGmd",
  "userId": "q0223WzGvKGmd",
}
`;
